<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Could've used linear layout for simplicity but wanted practice   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_text"
            android:theme="@style/BasicButton"
            app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="@+id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

        <Button
            android:id="@+id/create_new_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/create_new_account"
            android:theme="@style/BasicButton"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>