<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.shoeList.ShoeListViewModel" />

        <variable
            name="newShoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Used constraint layout to accommodate vertical chain and horizontal chains in same viewgroup -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/frag_shoe_detail_name_hint"
            app:layout_constraintBottom_toTopOf="@+id/company_text_input"
            app:layout_constraintStart_toStartOf="@+id/company_text_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={newShoe.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/frag_shoe_detail_email_hint"
            app:layout_constraintBottom_toTopOf="@+id/size_text_input"
            app:layout_constraintStart_toStartOf="@+id/size_text_input"
            app:layout_constraintTop_toBottomOf="@+id/name_text_input"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={newShoe.company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_text_input"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/frag_shoe_detail_size"
            app:layout_constraintBottom_toTopOf="@+id/description_input_text"
            app:layout_constraintStart_toStartOf="@+id/description_input_text"
            app:layout_constraintTop_toBottomOf="@+id/company_text_input"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={`` + newShoe.size}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/frag_shoe_detail_desc"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_text_input"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={newShoe.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_shoe_detail_cancel"
            android:theme="@style/BasicButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.validateShoe(newShoe)}"
            android:text="@string/frag_shoe_detail_save"
            android:theme="@style/BasicButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>